--- a/solution/MarathonTracker/app/build.gradle
+++ b/solution/MarathonTracker/app/build.gradle
@@ -27,5 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    // google play services
+    compile 'com.google.android.gms:play-services-location:11.0.4'
+
+    //testing
     testCompile 'junit:junit:4.12'
 }
