--- a/solution/MarathonTracker/app/src/main/AndroidManifest.xml
+++ b/solution/MarathonTracker/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.GeofenceIntentService"
+            android:exported="false">
+        </service>
+
     </application>
 
 </manifest>
