--- a/solution/MarathonTracker/app/src/main/AndroidManifest.xml
+++ b/solution/MarathonTracker/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +21,11 @@
 
         <service
             android:name=".services.GeofenceIntentService"
-            android:exported="false">
-        </service>
+            android:exported="false" />
+
+        <service
+            android:name=".services.TrackerService"
+            android:exported="false" />
 
     </application>
-
 </manifest>
