MainActivity changed launchMode to singleTop.

--- a/solution/MarathonTracker/app/src/main/AndroidManifest.xml
+++ b/solution/MarathonTracker/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,7 +29,8 @@
 
         <provider
             android:name=".providers.MarathonContentProvider"
-            android:authorities="com.udragan.android.marathontracker" />
+            android:authorities="com.udragan.android.marathontracker"
+            android:exported="false" />
 
     </application>
 </manifest>
